name:                llvm-general-util
version:             0.1
synopsis:            Higher-level wrapper around llvm-general
homepage:            https://github.com/dfoxfranke/llvm-general-util
license:             MIT
license-file:        LICENSE
author:              Daniel Fox Franke
maintainer:          dfoxfranke@gmail.com
copyright:           (c) 2014 Daniel Fox Franke
category:            Compilers/Interpreters, Code Generation
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     LLVM.General.Util,
                       LLVM.General.Util.Platform,
                       LLVM.General.Util.Settings,
                       LLVM.General.Util.Diagnostic,
                       LLVM.General.Util.L,
                       LLVM.General.Util.LibraryInfo,
                       LLVM.General.Util.Module,
                       LLVM.General.Util.PassSetSpec
  other-modules:       LLVM.General.Util.Internal.TH,
                       LLVM.General.Util.Internal.L,
                       LLVM.General.Util.Internal.Diagnostic
  build-depends:       base >=4.7 && <5,
                       bytestring ==0.10.*,
                       containers ==0.5.*,
                       classy-prelude ==0.9.*,
                       llvm-general >=3.4.2.2 && <3.4.4,
                       llvm-general-pure >=3.4.2.2 && <3.4.4,
                       monad-control ==0.3.*,
                       mmorph ==1.0.*,
                       mtl >=2.1 && <2.3,
                       split <0.3,
                       template-haskell ==2.9.*,
                       transformers >= 0.3 && <0.5,
                       transformers-base ==0.4.*,
                       lifted-base ==0.2.*,
                       void >=0.4 && <0.7



test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test/
  other-modules:       LLVM.General.Util.Test.Platform.SmallCheck
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5,
                       bytestring ==0.10.*,
                       containers ==0.5.*,
                       classy-prelude ==0.9.*,
                       llvm-general >=3.4.2.2 && <3.4.4,
                       llvm-general-pure >=3.4.2.2 && <3.4.4,
                       llvm-general-util ==0.1,
                       monad-control ==0.3.*,
                       mmorph ==1.0.*,
                       mtl >=2.1 && <2.3,
                       QuickCheck ==2.7.*,
                       split <0.3,
                       smallcheck ==1.1.*,
                       template-haskell ==2.9.*,
                       test-framework,
                       test-framework-smallcheck,
                       transformers >= 0.3 && <0.5,
                       transformers-base ==0.4.*,
                       lifted-base ==0.2.*,
                       void >=0.4 && <0.7
